# relayos

./: .gitignore  BUG_SCAN.md  CHANGELOG.md  COLLAB.md  README.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KR.md  README_ZH.md  audit_final.md  pyproject.toml
.github/workflows/: ci.yml
agentbridge/: __init__.py  __main__.py  config.py
agentbridge/adapters/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  ollama.py  openai.py
agentbridge/cli/: main.py
agentbridge/mcp/: client.py
agentbridge/memory/: store.py
agentbridge/orchestrator/: __init__.py  pool.py  scheduler.py
agentbridge/terminals/: __init__.py  adapters.py
agentbridge/workflow/: engine.py  models.py
agentmesh/: config.py
agentmesh/cli/: main.py
agentmesh/orchestrator/: __init__.py  pool.py  scheduler.py
agentmesh/terminals/: __init__.py  adapters.py
docs/: architecture.md  audit-report.md  roadmap.md  vision.md
examples/: parallel-research.yaml
relayos/: __init__.py  __main__.py  config.py  cost.py  i18n.py
relayos/adapters/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  ollama.py  openai.py
relayos/cli/: config_commands.py  main.py  wizard.py
relayos/core/: __init__.py  artifacts.py  budget.py  compiler.py  compress.py  identity.py  inbox.py  knowledge.py  planner.py  plugin.py  provider_registry.py  router.py  schemas.py  session.py  state.py  team.py  worker.py
relayos/executor/: mco.py
relayos/mcp/: client.py
relayos/memory/: store.py
relayos/orchestrator/: __init__.py  pool.py  scheduler.py
relayos/providers/: __init__.py  router.py
relayos/server/: __init__.py  api.py
relayos/server/static/: index.html  style.css
relayos/terminals/: __init__.py  adapters.py  base.py  scheduler.py
relayos/tui/: app.py  focus.py
relayos/workflow/: engine.py
