[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbridge"
version = "0.1.0a1"
description = "Multi-agent orchestration layer for AI tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "jjjjjjjjnnjnn"}]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
agentmesh = "agentbridge.cli.main:cli"

[project.entry-points."agentbridge.adapters"]
openai = "agentbridge.adapters.openai:OpenAIAdapter"
anthropic = "agentbridge.adapters.anthropic:AnthropicAdapter"
google = "agentbridge.adapters.google:GoogleAdapter"
ollama = "agentbridge.adapters.ollama:OllamaAdapter"
deepseek = "agentbridge.adapters.deepseek:DeepSeekAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmesh*"]
