[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayos"
version = "0.1.0a1"
description = "Multi-agent orchestration layer for AI tools"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "jjjjjjjjnnjnn"}]
keywords = ["multi-agent", "llm", "orchestration", "mcp", "ai", "workflow", "claude", "gpt", "gemini"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/jjjjjjjjnnjnn/relayos"
Repository = "https://github.com/jjjjjjjjnnjnn/relayos"
BugTracker = "https://github.com/jjjjjjjjnnjnn/relayos/issues"

[project.scripts]
relayos = "relayos.cli.main:cli"

[project.entry-points."relayos.adapters"]
openai = "relayos.adapters.openai:OpenAIAdapter"
anthropic = "relayos.adapters.anthropic:AnthropicAdapter"
google = "relayos.adapters.google:GoogleAdapter"
ollama = "relayos.adapters.ollama:OllamaAdapter"
deepseek = "relayos.adapters.deepseek:DeepSeekAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["relayos*"]
