[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayos"
version = "0.2.0a20"
description = "Agent Operating System — terminal-native AI workspace for persistent worker teams"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "jjjjjjjjnnjnn"}]
keywords = [ "ai-workers", "ai-team", "tui", "persistent-agents", "multi-agent", "llm", "orchestration", "mcp", "ai", "workflow", "claude", "gpt", "gemini"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]
executor = [
    # mco is used via subprocess (python -m mco), not as a library import.
    # Install separately: pip install mco
]

[project.urls]
Homepage = "https://github.com/jjjjjjjjnnjnn/relayos"
Repository = "https://github.com/jjjjjjjjnnjnn/relayos"
BugTracker = "https://github.com/jjjjjjjjnnjnn/relayos/issues"

[project.scripts]
relayos = "relayos.cli.main:cli"
relay = "relayos.tui.app:main"

[project.entry-points."relayos.adapters"]
openai = "relayos.adapters.openai:OpenAIAdapter"
anthropic = "relayos.adapters.anthropic:AnthropicAdapter"
google = "relayos.adapters.google:GoogleAdapter"
ollama = "relayos.adapters.ollama:OllamaAdapter"
deepseek = "relayos.adapters.deepseek:DeepSeekAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["relayos*"]

[tool.setuptools.package-data]
relayos = ["server/static/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.coverage.run]
source = ["relayos"]
omit = ["relayos/server/static/*"]
